[package]
name = "kvs"
version = "0.1.0"
authors = ["shenjun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = "0.3"
tempfile = "3.0.7"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.39"
criterion = "0.2.11"
log = "0.4.*"
env_logger = "0.8.*"
nom = "6.0.1"
sled = "0.34.*"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
rand = "0.6.5"
walkdir = "2.2.7"
tempfile = "3.0.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"