[package]
name = "kvs"
version = "0.1.0"
authors = ["shenjun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = "0.3"
tempfile = "3.0.7"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.39"
log = "0.4.*"
env_logger = "0.8.*"
nom = "6.0.1"
sled = "0.34.*"
crossbeam = "0.8.0"
scopeguard = "1.1.0"
num_cpus = "1.0"
rayon = "1.5.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
rand = "0.6.5"
walkdir = "2.2.7"
tempfile = "3.0.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"
criterion = "0.2.11"

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "server_bench"
harness = false
